Fix vertical spacing in pillbox menu

--- a/src/components/PillboxMenu.less
+++ b/src/components/PillboxMenu.less
@@ -10,6 +10,10 @@
   &:before {
     right: calc(var(--dsm-popover-arrow-right) - 1px);
   }
+
+  .dcg-component-checkbox {
+    margin-top: 0;
+  }
 }
 
 .dcg-calculator-api-container
